MDEV-23826: ORDER BY in view definition leads to wrong result with GROUP BY on query using view

Introduced val_time_packed and val_datetime_packed  functions for Item_direct_ref
to make sure to get the value from the item it is referring to.

The issue for incorrect result was that the item was getting its value
from the temporary table rather than from the view.